# constrained-diffusion

./: .gitignore  LICENSE  README.md  example.py  install_datacrunch.sh  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml  regex-dfa-tests.yml  rustformlang-tests.yml
constrained_diffusion/: constrain_utils.py
constrained_diffusion/cfgs/: cpp.py  json.py  jsonschema.py  smiles.py
constrained_diffusion/eval/dllm/: dataset.py  generic_inference.py  model.py
constrained_diffusion/eval/dllm/datasets/: cpp.py  (+3 more)
constrained_diffusion/eval/mri/: dataset.py  generic_inference.py  model.py
docs/: CNAME  index.html
docs/static/css/: index.css
docs/static/js/: index.js  libgif.js
eval/: README.md  check_all.py  check_all_individually.sh  download_models.py  run_all.sh
eval/dllm/: run_dllm.py  run_dllm_step_ablation.py
eval/dllm/cpp/: checker.py
eval/dllm/jsonmode/: checker.py  run_jsonmode.sh
eval/dllm/smiles/: README.md  checker.py  requirements.txt
eval/figures/: dllm.py  dllm_ablation_steps.py  dllm_ablation_steps_time.py  dllm_time.py  mri.py  mri_time.py  util.py
eval/mri/: filter.txt  run_fim.py  run_mri.py
regex-dfa/: Cargo.toml  README.md
regex-dfa/src/: error.rs  graph.rs  lib.rs  look.rs  refinery.rs  regex.rs  unicode.rs
regex-dfa/src/dfa/: minimizer.rs  mod.rs  prefix_searcher.rs  trie.rs
regex-dfa/src/nfa/: has_looks.rs  mod.rs  no_looks.rs
regex-dfa/src/runner/: anchored.rs  forward_backward.rs  mod.rs  program.rs
regex-dfa/tests/: matches.rs
rustformlang/: .gitignore  Cargo.toml  README.md
rustformlang/bench/: js_grammar_bench.rs
rustformlang/src/: constraining.rs  input_symbol.rs  language.rs  lib.rs
rustformlang/src/cfg/: cfg.rs  mod.rs  production.rs  terminal.rs  variable.rs
rustformlang/src/fa/: bytes_dfa.rs  dfa.rs  epsilon_nfa.rs  finite_automaton.rs  mod.rs  nfa.rs  state.rs
rustformlang/src/regex/: regex.rs
rustformlang/tests/: cfg.rs  constraining.rs  dfa.rs  epsilon_nfa.rs  regex.rs
rustformlang_bindings/: Cargo.toml  pyproject.toml
rustformlang_bindings/rustformlang/: __init__.py
rustformlang_bindings/rustformlang/cfg/: __init__.py  __init__.pyi
rustformlang_bindings/rustformlang/constraining/: __init__.pyi
rustformlang_bindings/rustformlang/fa/bytes_dfa/: __init__.pyi
rustformlang_bindings/rustformlang/fa/dfa/: __init__.pyi
rustformlang_bindings/rustformlang/fa/epsilon_nfa/: __init__.pyi
rustformlang_bindings/src/: cfg.rs  constraining.rs  lib.rs
rustformlang_bindings/src/fa/: bytes_dfa.rs  dfa.rs  epsilon_nfa.rs  mod.rs
tests/: test_bindings.py  test_constrain_utils.py
tests/test_cfgs/: test_cpp.py  test_jsonmode.py  test_smiles.py
(+14 files in other folders)
