[package]
name = "rustformlang"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustformlang"
bench = false

[dependencies]
elsa = "1.11.2"
fancy-regex = "0.14.0"
hashbrown = "0.15.4"
lazy_static = "1.5.0"
memoize = "0.5.1"
once_cell = "1.21.3"
priority-queue = "2.5.0"
rayon = "1.10.0"
regex-syntax = "0.4"
regex_dfa = { path = "../regex-dfa" }
rustc-hash = "2.1.1"
smallvec = "1.15.0"


[[bin]]
name = "js_grammar_bench"
path = "bench/js_grammar_bench.rs"
